Added javadoc comments and unit tests